--- a/client/app/question/question.css
+++ b/client/app/question/question.css
@@ -6,3 +6,28 @@
 .question-dialog .input-message{
     font-size:10px;
 }
+
+.question-image-container{
+    position:relative;
+}
+.question-image-input{
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.question-image-input + label{
+    position:absolute;
+    width:100%;
+    height:100%;
+    left:0px;
+    cursor: pointer;
+}
+
+.question-image-input + label:hover {
+    background-color: white;
+    opacity: 0.5;
+}
