Updates for accepting responses in a dialog

--- a/client/components/shell/shell.html
+++ b/client/components/shell/shell.html
@@ -25,8 +25,9 @@
       </h2>
       <span flex=""></span>
       <md-menu>
-        <md-button aria-label="Open phone interactions menu" class="md-icon-button" ng-click="openMenu($mdOpenMenu, $event)">
-          <md-icon md-menu-origin md-svg-icon="assets/icons/dots-vertical.svg"></md-icon>
+        <md-button aria-label="Open profile menu" class="md-icon-button btn-profile-menu" ng-click="openMenu($mdOpenMenu, $event)">
+          <!--<md-icon md-menu-origin md-svg-icon="assets/icons/dots-vertical.svg"></md-icon>-->
+          <img ng-src={{getProfileImage()}} />
         </md-button>
         <md-menu-content width="4">
           <md-menu-item>
