--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1,7 +1,9 @@
 /**
  * App-wide Styles
  */
-
+body{
+  font-family: 'Roboto', sans-serif;
+}
  .main-shell .profile-container {
    height: 100%;
    font-size: 14px;
@@ -16,4 +18,10 @@
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
+}
+
+.btn-profile-menu > img{
+  position:absolute;
+  left: -4px;
+  top: -4px;
 }
