--- a/client/app/question/question.css
+++ b/client/app/question/question.css
@@ -31,3 +31,12 @@
     background-color: white;
     opacity: 0.5;
 }
+
+.question-image-input + label > img {
+    max-width:100%;
+    max-height:100%;
+}
+
+.response-config-dialog .input-message{
+    font-size:10px;
+}
