--- a/client/components/shell/shell.html
+++ b/client/components/shell/shell.html
@@ -21,7 +21,7 @@
         <md-icon md-svg-icon="assets/icons/menu.svg"></md-icon>
       </md-button>
       <h2>
-        <span>Word Problems Application</span>
+        <span>Word Problems Editor</span>
       </h2>
       <span flex=""></span>
       <md-menu>
