Author: Swathi Description: MCQ zCat changes[UI & Save]

--- a/client/app/question/question.css
+++ b/client/app/question/question.css
@@ -10,7 +10,18 @@
 .question-image-container{
     position:relative;
 }
+.option-image-container{
+    position:relative;
+}
 .question-image-input{
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+.option-image-input{
     width: 0.1px;
 	height: 0.1px;
 	opacity: 0;
