--- a/client/app/question/question.css
+++ b/client/app/question/question.css
@@ -1,72 +1,87 @@
-.question-dialog{
-    width: 100%;
-    height:100%;
+.question-dialog {
+  width: 100%;
+  height: 100%;
 }
 
-.question-dialog .input-message{
-    font-size:10px;
+.question-dialog .input-message {
+  font-size: 10px;
 }
 
-.question-image-container{
-    position:relative;
-}
-.option-image-container{
-    position:relative;
-}
-.question-image-input{
-    width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
-}
-.option-image-input{
-    width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
+.question-image-container {
+  position: relative;
 }
 
-.question-image-input + label{
-    position:absolute;
-    width:100%;
-    height:100%;
-    left:0px;
-    cursor: pointer;
+.option-image-container {
+  position: relative;
 }
 
-.question-image-input + label:hover {
-    background-color: white;
-    opacity: 0.5;
+.question-image-input {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
-.question-image-input + label > img {
-    max-width:100%;
-    max-height:100%;
+.wrap .qbutton {
+  top: 2px;
+  left: 2px;
+  z-index: 100;
+  display: none;
+  position: absolute;
 }
 
-.response-config-dialog .input-message{
-    font-size:10px;
+.wrap:hover .qbutton {
+  display: block;
 }
 
-.comment-user-info{
-    font-size: 12px;
+.option-image-input {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
-.comment-text{
-    background-color:#FAFAFA;
-    border:1px solid #EEEEEE;
-    border-radius:4px;
-    padding:10px;
+.question-image-input+label {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  cursor: pointer;
 }
 
-.comment-block{
-    padding-bottom: 12px;
+.question-image-input+label:hover {
+  background-color: white;
+  opacity: 0.5;
 }
 
-.questions-list .question-id{
-    margin-right: 30px;
+.question-image-input+label>img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.response-config-dialog .input-message {
+  font-size: 10px;
+}
+
+.comment-user-info {
+  font-size: 12px;
+}
+
+.comment-text {
+  background-color: #FAFAFA;
+  border: 1px solid #EEEEEE;
+  border-radius: 4px;
+  padding: 10px;
+}
+
+.comment-block {
+  padding-bottom: 12px;
+}
+
+.questions-list .question-id {
+  margin-right: 30px;
 }
